--- a/jupyter/0211.fdtree_plot.ipynb
+++ b/jupyter/0211.fdtree_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,8 @@
     "if \"Group\" in doit:\n",
     "    filenames = glob.glob(\"../sample/Group*.yml\")\n",
     "    print(filenames)\n",
-    "    filenames = [ '../sample/Group_FeatureSetbykMeans.yml',\n",
+    "    filenames = [ '../sample/Group_FeatureSubset.yml',\n",
+    "        '../sample/Group_FeatureSetbykMeans.yml',\n",
     "     '../sample/Group_DistanceMatrix.yml',\n",
     "     '../sample/Group_FeatureSet.yml']\n",
     "    #filenames = ['../sample/Group_FeatureSubset.yml']\n",
@@ -90,13 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "workflow: domainknowledgeSubgroup\n",
+      "workflow: domainknowledgeSubgroup\n",
       "workflow: kmeans\n",
       "workflow: gmm\n",
       "workflow: kmeans\n",
@@ -118,7 +123,7 @@
        "'/media/sf_local_pc/all.gv.png'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -146,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['getDomainKnowledge', 'FeatureGroupCandidates', 'FeatureDistanceMatrix', 'GMMParameter', 'FeatureDendrogram(group)', 'kMeansParameter', 'FeatureGroupsDistanceThresholdAll', 'DescriptorOfAllData']\n",
+      "['FeatureGroupsDistanceThresholdAll', 'getDomainKnowledge(group)', 'FeatureGroupCandidates', 'kMeansParameter', 'getDomainKnowledge(subgroup)', 'FeatureGroups', 'DescriptorOfAllData', 'FeatureDendrogram(group)', 'FeatureDistanceMatrix', 'GMMParameter', 'FeatureSubgroupCandidates']\n",
       "png is made.\n"
      ]
     },
@@ -156,7 +161,7 @@
        "'/media/sf_local_pc/allWF.gv.png'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,24 +185,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">found link [['DescriptorOfAllData', 'FeatureGroupCandidates']]\n",
-      "wklistnext> ['FeatureGroupCandidates', 'FeatureDistanceMatrix']\n",
-      "wklistnext> ['FeatureGroups']\n",
-      "wklistnext> []\n",
+      ">found link [['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates']]\n",
+      "wklistnext> ['FeatureDistanceMatrix', 'FeatureGroupCandidates']\n",
       "wklistnext> ['FeatureDendrogram(group)']\n",
-      ">found link [['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureDistanceMatrix'], ['FeatureDistanceMatrix', 'FeatureDendrogram(group)'], ['FeatureDendrogram(group)', 'FeatureGroupCandidates']]\n",
+      ">found link [['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureDistanceMatrix'], ['FeatureDistanceMatrix', 'FeatureDendrogram(group)'], ['FeatureDendrogram(group)', 'FeatureGroupCandidates']]\n",
       "wklistnext> ['FeatureGroupCandidates']\n",
       "wklistnext> ['FeatureGroups']\n",
+      "wklistnext> ['FeatureSubgroupCandidates']\n",
+      "wklistnext> ['FeatureSubgroups']\n",
       "wklistnext> []\n",
+      "wklistnext> ['FeatureGroups']\n",
+      "wklistnext> ['FeatureSubgroupCandidates']\n",
+      "wklistnext> ['FeatureSubgroups']\n",
+      "wklistnext> []\n",
+      "search> {'methodname': 'FeaturekMeansClustering(group)', 'outputname': 'FeatureGroupCandidates', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'choosekMeansParameterAll', 'methodtype': 'function', 'outputname': 'kMeansParameter', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'FeatureGMMClustering(group)', 'outputname': 'FeatureGroupCandidates', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'chooseGMMParameterAll', 'methodtype': 'function', 'outputname': 'GMMParameter', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'FeatureSpearmanDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'FeatureEucleadianDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'FeatureCosineDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'FeatureManhattanDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'FeatureDistanceMatrixHierarchalClustering', 'outputname': 'FeatureDendrogram(group)', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'DendrogramClusteringFeatureGroups', 'outputname': 'FeatureGroupCandidates', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'chooseFeatureGroupsDistanceThresholdAll', 'methodtype': 'function', 'outputname': 'FeatureGroupsDistanceThresholdAll', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'FeatureDendrogram(group)', 'outputtype': 'parts'}\n",
       "png is made.\n"
      ]
     }
