add attribute to Importance

--- a/jupyter/0211.fdtree_plot.ipynb
+++ b/jupyter/0211.fdtree_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,26 +24,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "doit = [\"MaterialsList\",\"all\"]\n",
-    "doit = [\"Group\"]"
+    "doit = [\"Group\"]\n",
+    "doit = [\"Importance\"]\n",
+    "\n",
+    "dotoption={\"apply_same_rank\":False,\"connect_invis\":False}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['../sample/Group_FeatureSubset.yml', '../sample/Group_FeatureSetbykMeans.yml', '../sample/Group_DistanceMatrix.yml', '../sample/Group_FeatureSet.yml']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['../sample/Importance_GenerateGroup.yml',\n",
+       " '../sample/Importance_ExhaustiveSearchDiagram.yml',\n",
+       " '../sample/Importance_VisualizeRelevanceImportance.yml',\n",
+       " '../sample/Importance_MakeScores.yml',\n",
+       " '../sample/Importance_DescriptorGroupRelevanceImportance_Taxo.yml',\n",
+       " '../sample/Importance_ExhaustiveSearchDOS.yml',\n",
+       " '../sample/Importance_TopTaxo.yml',\n",
+       " '../sample/Importance_RelevanceImportance.yml']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,18 +93,21 @@
     "\n",
     "if \"Group\" in doit:\n",
     "    filenames = glob.glob(\"../sample/Group*.yml\")\n",
-    "    print(filenames)\n",
     "    filenames = [ '../sample/Group_FeatureSubset.yml',\n",
     "        '../sample/Group_FeatureSetbykMeans.yml',\n",
     "     '../sample/Group_DistanceMatrix.yml',\n",
     "     '../sample/Group_FeatureSet.yml']\n",
     "    #filenames = ['../sample/Group_FeatureSubset.yml']\n",
-    "    filenames"
+    "    \n",
+    "if \"Importance\" in doit:\n",
+    "    filenames = glob.glob(\"../sample/Importance_*.yml\")\n",
+    "                 \n",
+    "filenames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -100,20 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "workflow: domainknowledgeSubgroup\n",
-      "workflow: domainknowledgeSubgroup\n",
-      "workflow: kmeans\n",
-      "workflow: gmm\n",
-      "workflow: kmeans\n",
-      "workflow: gmm\n",
-      "workflow: SpearmanDistance\n",
-      "workflow: elcleadianDistance\n",
-      "workflow: cosineDistance\n",
-      "workflow: manhattanDistance\n",
-      "workflow: DomainKnowlege\n",
-      "workflow: dendrogram\n",
-      "workflow: dendrogram\n",
-      "workflow: dendrogram\n",
+      "{'apply_same_rank': False, 'connect_invis': False}\n",
+      "DFTree:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "gen_tree: apply_same_rank False\n",
+      "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "linktyp None\n",
+      "link:\n",
+      "- link:\n",
+      "  - nodename: WeakDescriptorGroupImportance\n",
+      "    nodetype: parts\n",
+      "  - nodename: StrongDescriptorGroupImportance\n",
+      "    nodetype: parts\n",
+      "  linktype: is-a\n",
+      "  nodename: DescriptorGroupRelevanceImportance\n",
+      "  nodetype: parts\n",
+      "\n",
+      "gen_tree: apply_same_rank False\n",
+      "linktyp None\n",
+      "link:\n",
+      "- link:\n",
+      "  - linktype: is-a\n",
+      "    nodename: VisualizedRelevanceScoreImportance\n",
+      "    nodetype: parts\n",
+      "  - linktype: is-a\n",
+      "    nodename: VisualizedRelevanceDOSImportance\n",
+      "    nodetype: parts\n",
+      "  - linktype: is-a\n",
+      "    nodename: VisualizedFeatureImportance\n",
+      "    nodetype: parts\n",
+      "  linktype: is-a\n",
+      "  nodename: VisualizedImportance\n",
+      "  nodetype: parts\n",
+      "\n",
+      "gen_tree: apply_same_rank False\n",
       "png is made.\n"
      ]
     },
@@ -123,7 +159,7 @@
        "'/media/sf_local_pc/all.gv.png'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,9 +167,10 @@
    "source": [
     "fdtset = FDTreeSet()\n",
     "fdtset.load_files(filenames)\n",
-    "fdtset.print_names()\n",
+    "#fdtset.print_names()\n",
     "basename = \"all\"\n",
-    "fdtree = cauFirst.FDTree(basename)\n",
+    "print(dotoption)\n",
+    "fdtree = cauFirst.FDTree(basename,dotoption=dotoption)\n",
     "fdtree.apply(fdtset.export_dic())\n",
     "import shutil\n",
     "filename = \"{}.gv.png\".format(basename)\n",
@@ -142,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -151,7 +188,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FeatureGroupsDistanceThresholdAll', 'getDomainKnowledge(group)', 'FeatureGroupCandidates', 'kMeansParameter', 'getDomainKnowledge(subgroup)', 'FeatureGroups', 'DescriptorOfAllData', 'FeatureDendrogram(group)', 'FeatureDistanceMatrix', 'GMMParameter', 'FeatureSubgroupCandidates']\n",
+      "['FeatureSubgroups', 'FeatureDendrogram', 'ScoreOfAllPredictionModels', 'BestScoreExceptGroupWithSubgroup', 'chooseGroup', 'DescriptorGroupRelevanceImportance', 'chooseSubgroup', 'BestScoreExceptGroup', 'FeatureGroups', 'AllPredictionModelsExceptGroupWithSubgroup', 'AllPredictionModels', 'ScoreOfAllPredictionModelsExceptGroupWithSubgroup', 'ScoreOfAllPredictionModelsExceptGroup', 'AllPredictionModelsExceptGroup', 'BestScoreOfAllPredictionModels']\n",
+      "DFTree:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "gen_tree: apply_same_rank False\n",
       "png is made.\n"
      ]
     },
@@ -161,7 +201,7 @@
        "'/media/sf_local_pc/allWF.gv.png'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +215,7 @@
     "print(wfchain.get_outputnames(only=[\"node1\"]))\n",
     "\n",
     "basename = \"allWF\"\n",
-    "fdtree = cauFirst.FDTree(basename=basename)\n",
+    "fdtree = cauFirst.FDTree(basename=basename,dotoption=dotoption)\n",
     "fdtree.apply(wf)\n",
     "\n",
     "import shutil\n",
@@ -185,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -194,38 +234,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">found link [['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates']]\n",
-      "wklistnext> ['FeatureDistanceMatrix', 'FeatureGroupCandidates']\n",
-      "wklistnext> ['FeatureDendrogram(group)']\n",
-      ">found link [['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureGroupCandidates'], ['DescriptorOfAllData', 'FeatureDistanceMatrix'], ['FeatureDistanceMatrix', 'FeatureDendrogram(group)'], ['FeatureDendrogram(group)', 'FeatureGroupCandidates']]\n",
-      "wklistnext> ['FeatureGroupCandidates']\n",
-      "wklistnext> ['FeatureGroups']\n",
-      "wklistnext> ['FeatureSubgroupCandidates']\n",
-      "wklistnext> ['FeatureSubgroups']\n",
       "wklistnext> []\n",
-      "wklistnext> ['FeatureGroups']\n",
-      "wklistnext> ['FeatureSubgroupCandidates']\n",
-      "wklistnext> ['FeatureSubgroups']\n",
-      "wklistnext> []\n",
-      "search> {'methodname': 'FeaturekMeansClustering(group)', 'outputname': 'FeatureGroupCandidates', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'choosekMeansParameterAll', 'methodtype': 'function', 'outputname': 'kMeansParameter', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'FeatureGMMClustering(group)', 'outputname': 'FeatureGroupCandidates', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'chooseGMMParameterAll', 'methodtype': 'function', 'outputname': 'GMMParameter', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'FeatureSpearmanDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'FeatureEucleadianDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'FeatureCosineDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'FeatureManhattanDistance', 'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'genDescriptorOfAllData', 'methodtype': 'function', 'outputname': 'DescriptorOfAllData', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'FeatureDistanceMatrixHierarchalClustering', 'outputname': 'FeatureDendrogram(group)', 'outputtype': 'parts'}\n",
-      "add node> {'outputname': 'FeatureDistanceMatrix', 'outputtype': 'parts'}\n",
-      "search> {'methodname': 'DendrogramClusteringFeatureGroups', 'outputname': 'FeatureGroupCandidates', 'outputtype': 'parts'}\n",
-      "add node> {'methodname': 'chooseFeatureGroupsDistanceThresholdAll', 'methodtype': 'function', 'outputname': 'FeatureGroupsDistanceThresholdAll', 'outputtype': 'parts'}\n",
-      "add node> {'outputname': 'FeatureDendrogram(group)', 'outputtype': 'parts'}\n",
+      "DFTree:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
+      "gen_tree: apply_same_rank False\n",
       "png is made.\n"
      ]
     }
@@ -241,10 +253,14 @@
     "    trainchain = wfchain.search_link(\"DescriptorOfAllData\", \\\n",
     "                                     \"FeatureGroupCandidates\")\n",
     "    execute = True\n",
+    "if \"Importance in doit\":\n",
+    "    trainchain = wfchain.search_link(\"AllModels\", \\\n",
+    "                                     \"AllModelsExceptGroupWithSubgroup\")\n",
+    "    execute = True  \n",
     "    \n",
     "if execute:\n",
     "    wfsub = trainchain.to_WF()\n",
-    "    fdtree = cauFirst.FDTree(basename=\"new\")\n",
+    "    fdtree = cauFirst.FDTree(basename=\"new\",dotoption=dotoption)\n",
     "    fdtree.apply(wfsub)\n",
     "    import shutil\n",
     "    filename = \"new.gv.png\"\n",
