--- a/jupyter/0211.fdtree_plot.ipynb
+++ b/jupyter/0211.fdtree_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        " '../sample/Importance_RelevanceImportance.yml']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -159,7 +159,7 @@
        "'/media/sf_local_pc/all.gv.png'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FeatureSubgroups', 'FeatureDendrogram', 'ScoreOfAllPredictionModels', 'BestScoreExceptGroupWithSubgroup', 'chooseGroup', 'DescriptorGroupRelevanceImportance', 'chooseSubgroup', 'BestScoreExceptGroup', 'FeatureGroups', 'AllPredictionModelsExceptGroupWithSubgroup', 'AllPredictionModels', 'ScoreOfAllPredictionModelsExceptGroupWithSubgroup', 'ScoreOfAllPredictionModelsExceptGroup', 'AllPredictionModelsExceptGroup', 'BestScoreOfAllPredictionModels']\n",
+      "['FeatureDendrogram', 'chooseGroup', 'ScoreOfAllPredictionModelsExceptGroup', 'chooseSubgroup', 'ScoreOfAllPredictionModelsExceptGroupWithSubgroup', 'FeatureSubgroups', 'BestScoreExceptGroupWithSubgroup', 'ScoreOfAllPredictionModels', 'FeatureGroups', 'AllPredictionModels', 'DescriptorGroupRelevanceImportance', 'BestScoreOfAllPredictionModels', 'AllPredictionModelsExceptGroupWithSubgroup', 'BestScoreExceptGroup', 'AllPredictionModelsExceptGroup']\n",
       "DFTree:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
       "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
       "gen_tree: apply_same_rank False\n",
@@ -201,7 +201,7 @@
        "'/media/sf_local_pc/allWF.gv.png'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
