modify applyprefix modify sample

--- a/jupyter/0211.fdtree_plot.ipynb
+++ b/jupyter/0211.fdtree_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,37 +24,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "doit = [\"MaterialsList\",\"all\"]\n",
-    "doit = [\"Group\"]\n",
-    "doit = [\"Importance\"]\n",
+    "#doit = [\"Group\"]\n",
+    "#doit = [\"Importance\"]\n",
     "\n",
     "dotoption={\"apply_same_rank\":False,\"connect_invis\":False}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../sample/Importance_GenerateGroup.yml',\n",
-       " '../sample/Importance_ExhaustiveSearchDiagram.yml',\n",
-       " '../sample/Importance_VisualizeRelevanceImportance.yml',\n",
-       " '../sample/Importance_MakeScores.yml',\n",
-       " '../sample/Importance_DescriptorGroupRelevanceImportance_Taxo.yml',\n",
-       " '../sample/Importance_ExhaustiveSearchDOS.yml',\n",
-       " '../sample/Importance_TopTaxo.yml',\n",
-       " '../sample/Importance_RelevanceImportance.yml']"
+       "['../sample/MaterialsList_CrystalCandidates.yml',\n",
+       " '../sample/MaterialsList_RegressionModel.yml',\n",
+       " '../sample/MaterialsList_SearchGoodMaterial.yml',\n",
+       " '../sample/MaterialsList_TrainingSet.yml',\n",
+       " '../sample/MaterialsList_aquisitionFunction.yml',\n",
+       " '../sample/Richer_DB.yml']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -121,35 +119,6 @@
       "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
       "gen_tree: apply_same_rank False\n",
       "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
-      "linktyp None\n",
-      "link:\n",
-      "- link:\n",
-      "  - nodename: WeakDescriptorGroupImportance\n",
-      "    nodetype: parts\n",
-      "  - nodename: StrongDescriptorGroupImportance\n",
-      "    nodetype: parts\n",
-      "  linktype: is-a\n",
-      "  nodename: DescriptorGroupRelevanceImportance\n",
-      "  nodetype: parts\n",
-      "\n",
-      "gen_tree: apply_same_rank False\n",
-      "linktyp None\n",
-      "link:\n",
-      "- link:\n",
-      "  - linktype: is-a\n",
-      "    nodename: VisualizedRelevanceScoreImportance\n",
-      "    nodetype: parts\n",
-      "  - linktype: is-a\n",
-      "    nodename: VisualizedRelevanceDOSImportance\n",
-      "    nodetype: parts\n",
-      "  - linktype: is-a\n",
-      "    nodename: VisualizedFeatureImportance\n",
-      "    nodetype: parts\n",
-      "  linktype: is-a\n",
-      "  nodename: VisualizedImportance\n",
-      "  nodetype: parts\n",
-      "\n",
-      "gen_tree: apply_same_rank False\n",
       "png is made.\n"
      ]
     },
@@ -159,7 +128,7 @@
        "'/media/sf_local_pc/all.gv.png'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FeatureDendrogram', 'chooseGroup', 'ScoreOfAllPredictionModelsExceptGroup', 'chooseSubgroup', 'ScoreOfAllPredictionModelsExceptGroupWithSubgroup', 'FeatureSubgroups', 'BestScoreExceptGroupWithSubgroup', 'ScoreOfAllPredictionModels', 'FeatureGroups', 'AllPredictionModels', 'DescriptorGroupRelevanceImportance', 'BestScoreOfAllPredictionModels', 'AllPredictionModelsExceptGroupWithSubgroup', 'BestScoreExceptGroup', 'AllPredictionModelsExceptGroup']\n",
+      "['chooseMaterialsDatabase', 'searchMaterialsListHavingNoTargetVariable', 'NewSynthesizedCrystalCoordinates', 'PredictionMeanAndVariance', 'MaterialsKnowledge', 'aquisitionFunctionValues', 'chooseMaterialsCategory', 'TargetValues', 'raiseMaterialsList', 'existingCrystals', 'NewsetCrystal', 'SynthesizedMaterials', 'NewsetDescriptor', 'TrainingData', 'TargetValuesHavingCrystalFromDatabase', 'BayesianLinearRegression', 'NoExperimentMaterialsList', 'chooseTrainingSetCrystal', 'newTargetQuantityValues', 'getTargetSelectionCriterion', 'RegressionPredictionValues', 'RegressionModel', 'TrainingSetDescriptorAndRelationToTargetVariable']\n",
       "DFTree:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
       "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
       "gen_tree: apply_same_rank False\n",
@@ -201,7 +170,7 @@
        "'/media/sf_local_pc/allWF.gv.png'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -234,6 +203,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "wklistnext> ['BayesianLinearRegression', 'RegressionModel']\n",
+      "wklistnext> ['PredictionMeanAndVariance']\n",
+      "wklistnext> ['aquisitionFunctionValues']\n",
+      ">found link [['TrainingData', 'BayesianLinearRegression'], ['BayesianLinearRegression', 'PredictionMeanAndVariance'], ['PredictionMeanAndVariance', 'aquisitionFunctionValues'], ['aquisitionFunctionValues', 'raiseMaterialsList']]\n",
+      "wklistnext> ['raiseMaterialsList']\n",
+      "wklistnext> ['NoExperimentMaterialsList']\n",
+      "wklistnext> ['SynthesizedMaterials']\n",
+      "wklistnext> ['newTargetQuantityValues', 'NewSynthesizedCrystalCoordinates']\n",
+      "wklistnext> ['newTargetMaterial', 'RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "wklistnext> []\n",
+      "wklistnext> ['RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "wklistnext> ['RegressionPredictionValues']\n",
+      ">found link [['TrainingData', 'RegressionModel'], ['RegressionModel', 'RegressionPredictionValues'], ['RegressionPredictionValues', 'raiseMaterialsList']]\n",
+      "wklistnext> ['raiseMaterialsList']\n",
+      "wklistnext> ['NoExperimentMaterialsList']\n",
+      "wklistnext> ['SynthesizedMaterials']\n",
+      "wklistnext> ['newTargetQuantityValues', 'NewSynthesizedCrystalCoordinates']\n",
+      "wklistnext> ['newTargetMaterial', 'RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "wklistnext> []\n",
+      "wklistnext> ['RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "search> {'methodname': 'fitBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'BayesianLinearRegression', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'TrainingData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'fitBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'BayesianLinearRegression', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'BayesianLinearRegression', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'NewsetDescriptor', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'UCBaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'ThonpsonSamplingaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'sortAquisitionFunctionValues', 'methodtype': 'function', 'outputname': 'raiseMaterialsList', 'outputtype': 'function'}\n",
+      "add node> {'methodname': 'UCBaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'ThonpsonSamplingaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'sortAquisitionFunctionValues', 'methodtype': 'function', 'outputname': 'raiseMaterialsList', 'outputtype': 'function'}\n",
+      "search> {'methodname': 'NeuralNetworkRegression', 'outputname': 'RegressionModel', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'TrainingData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'LinearRegression', 'outputname': 'RegressionModel', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'TrainingData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'KernelRegression', 'outputname': 'RegressionModel', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'TrainingData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'RandomForestRegression', 'outputname': 'RegressionModel', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'TrainingData', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'evaluateRegressionModel', 'methodtype': 'function', 'outputname': 'RegressionPredictionValues', 'outputtype': 'function'}\n",
+      "add node> {'outputname': 'RegressionModel', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'NewsetDescriptor', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'sortRegressionPredictionValues', 'methodtype': 'function', 'outputname': 'raiseMaterialsList', 'outputtype': 'function'}\n",
+      "add node> {'methodname': 'evaluateRegressionModel', 'methodtype': 'function', 'outputname': 'RegressionPredictionValues', 'outputtype': 'function'}\n",
+      "wklistnext> ['NewsetDescriptor']\n",
+      "wklistnext> ['RegressionPredictionValues', 'PredictionMeanAndVariance']\n",
+      ">found link [['NewsetCrystal', 'NewsetDescriptor'], ['NewsetDescriptor', 'RegressionPredictionValues'], ['RegressionPredictionValues', 'raiseMaterialsList']]\n",
+      "wklistnext> ['raiseMaterialsList']\n",
+      "wklistnext> ['NoExperimentMaterialsList']\n",
+      "wklistnext> ['SynthesizedMaterials']\n",
+      "wklistnext> ['newTargetQuantityValues', 'NewSynthesizedCrystalCoordinates']\n",
+      "wklistnext> ['newTargetMaterial', 'RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "wklistnext> []\n",
+      "wklistnext> ['RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "wklistnext> ['aquisitionFunctionValues']\n",
+      ">found link [['NewsetCrystal', 'NewsetDescriptor'], ['NewsetDescriptor', 'PredictionMeanAndVariance'], ['PredictionMeanAndVariance', 'aquisitionFunctionValues'], ['aquisitionFunctionValues', 'raiseMaterialsList']]\n",
+      "wklistnext> ['raiseMaterialsList']\n",
+      "wklistnext> ['NoExperimentMaterialsList']\n",
+      "wklistnext> ['SynthesizedMaterials']\n",
+      "wklistnext> ['newTargetQuantityValues', 'NewSynthesizedCrystalCoordinates']\n",
+      "wklistnext> ['newTargetMaterial', 'RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "wklistnext> []\n",
+      "wklistnext> ['RicherMaterialsDatabase']\n",
+      "wklistnext> []\n",
+      "search> {'methodname': 'CrystalToDescriptorAndRelationToTargetVariable(newSet)', 'methodtype': 'method', 'outputname': 'NewsetDescriptor', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'NewsetCrystal', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'evaluateRegressionModel', 'methodtype': 'function', 'outputname': 'RegressionPredictionValues', 'outputtype': 'function'}\n",
+      "add node> {'outputname': 'RegressionModel', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'NewsetDescriptor', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'sortRegressionPredictionValues', 'methodtype': 'function', 'outputname': 'raiseMaterialsList', 'outputtype': 'function'}\n",
+      "add node> {'methodname': 'evaluateRegressionModel', 'methodtype': 'function', 'outputname': 'RegressionPredictionValues', 'outputtype': 'function'}\n",
+      "search> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'fitBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'BayesianLinearRegression', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'BayesianLinearRegression', 'outputtype': 'parts'}\n",
+      "add node> {'outputname': 'NewsetDescriptor', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'UCBaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'ThonpsonSamplingaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'applyBayesianLinearRegression', 'methodtype': 'function', 'outputname': 'PredictionMeanAndVariance', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'sortAquisitionFunctionValues', 'methodtype': 'function', 'outputname': 'raiseMaterialsList', 'outputtype': 'function'}\n",
+      "add node> {'methodname': 'UCBaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "add node> {'methodname': 'ThonpsonSamplingaquisitionFunction', 'methodtype': 'parts', 'outputname': 'aquisitionFunctionValues', 'outputtype': 'parts'}\n",
+      "search> {'methodname': 'sortAquisitionFunctionValues', 'methodtype': 'function', 'outputname': 'raiseMaterialsList', 'outputtype': 'function'}\n",
       "wklistnext> []\n",
       "DFTree:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
       "init:dotoption {'apply_same_rank': False, 'connect_invis': False}\n",
@@ -265,6 +328,23 @@
     "    import shutil\n",
     "    filename = \"new.gv.png\"\n",
     "    shutil.copyfile(filename,\"/media/sf_local_pc/{}\".format(filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"all done\")"
    ]
   },
   {
